# calander-cli

./: Cargo.toml
docs/: README.md
snap/: snapcraft.yaml
src/: calander.rs  lib.rs  main.rs
